--- a/composer.json
+++ b/composer.json
@@ -63,7 +63,7 @@
             "@php artisan key:generate --ansi"
         ],
          "post-install-cmd": [
-             "@php artisan clear-compiled", "@php artisan optimize", "@php artisan passport:install"
+             "@php artisan passport:install"
          ]
 
 
